@@ -5,114 +5,111 @@ import com.febrie.rpg.quest.Quest;
 import com.febrie.rpg.quest.builder.QuestBuilder;
 import com.febrie.rpg.quest.QuestID;
 import com.febrie.rpg.quest.QuestCategory;
-import com.febrie.rpg.quest.dialog.QuestDialog;
 import com.febrie.rpg.quest.objective.QuestObjective;
-import com.febrie.rpg.quest.objective.impl.DeliverItemObjective;
-import com.febrie.rpg.quest.objective.impl.HarvestObjective;
+import com.febrie.rpg.quest.objective.impl.CollectItemObjective;
+import com.febrie.rpg.quest.objective.impl.KillMobObjective;
+import com.febrie.rpg.quest.objective.impl.InteractNPCObjective;
+import com.febrie.rpg.quest.objective.impl.VisitLocationObjective;
 import com.febrie.rpg.quest.reward.impl.BasicReward;
-import java.util.List;
 import net.kyori.adventure.text.Component;
 import org.bukkit.Material;
+import org.bukkit.entity.EntityType;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.ItemStack;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.*;
-
+import java.util.Arrays;
 import java.util.List;
+
 /**
- * 농부의 부탁 - 사이드 퀘스트
- * 농부를 도와 농작물을 수확하고 전달
+ * Side Quest: Farmer's Request
+ * Help a local farmer with crop problems and pest control
  *
  * @author Febrie
  */
 public class FarmersRequestQuest extends Quest {
 
     /**
-     * 퀘스트 빌더
-     */
-    private static class FarmersRequestBuilder extends QuestBuilder {
-        @Override
-        public Quest build() {
-            return new FarmersRequestQuest(this);
-        }
-    }
-
-    /**
-     * 기본 생성자
+     * Default constructor
      */
     public FarmersRequestQuest() {
-        this(createBuilder());
+        super(createBuilder());
     }
 
     /**
-     * 빌더 생성자
-     */
-    private FarmersRequestQuest(@NotNull QuestBuilder builder) {
-        super(builder);
-    }
-
-    /**
-     * 퀘스트 설정
+     * Quest setup
      */
     private static QuestBuilder createBuilder() {
-        // 농작물 수확 목표
-        List<QuestObjective> objectives = new ArrayList<>();
-        objectives.add(new HarvestObjective("harvest_wheat", Material.WHEAT, 30));
-        objectives.add(new HarvestObjective("harvest_carrots", Material.CARROTS, 20));
-        objectives.add(new HarvestObjective("harvest_potatoes", Material.POTATOES, 20));
-
-        // 농부에게 전달 목표
-        Map<Material, Integer> deliveryItems = new HashMap<>();
-        deliveryItems.put(Material.WHEAT, 30);
-        deliveryItems.put(Material.CARROT, 20);
-        deliveryItems.put(Material.POTATO, 20);
-
-        objectives.add(new DeliverItemObjective(
-                "deliver_to_farmer",
-                "농부 김씨",
-                deliveryItems
-        ));
-
-        return new FarmersRequestBuilder()
+        return new QuestBuilder()
                 .id(QuestID.SIDE_FARMERS_REQUEST)
-                .objectives(objectives)
+                .objectives(Arrays.asList(
+                        new InteractNPCObjective("talk_worried_farmer", "worried_farmer"),
+                        new VisitLocationObjective("visit_damaged_farmland", "damaged_farmland"),
+                        new KillMobObjective("kill_rabbits", EntityType.RABBIT, 15),
+                        new CollectItemObjective("collect_fresh_seeds", Material.WHEAT_SEEDS, 32),
+                        new CollectItemObjective("collect_bone_meal", Material.BONE_MEAL, 16),
+                        new VisitLocationObjective("visit_irrigation_canal", "irrigation_canal"),
+                        new InteractNPCObjective("return_worried_farmer", "worried_farmer")
+                ))
                 .reward(new BasicReward.Builder()
-                        .addCurrency(CurrencyType.GOLD, 300)
-                        .addCurrency(CurrencyType.EMERALD, 10)
-                        .addItem(new ItemStack(Material.GOLDEN_HOE))
-                        .addItem(new ItemStack(Material.BONE_MEAL, 64))
-                        .addExperience(200)
+                        .addExperience(800)
+                        .addCurrency(CurrencyType.GOLD, 150)
+                        .addItem(new ItemStack(Material.BREAD, 16))
+                        .addItem(new ItemStack(Material.CARROT, 8))
                         .build())
-                .sequential(true)
+                .sequential(false)
                 .category(QuestCategory.SIDE)
-                .minLevel(3)
-                .addPrerequisite(QuestID.TUTORIAL_BASIC_COMBAT);
+                .minLevel(8);
     }
 
     @Override
     public @NotNull Component getDisplayName(@NotNull Player who) {
-        return Component.translatable("quest.side.farmers_request.name");
+        return Component.translatable("quest.side.farmers-request.name");
     }
 
     @Override
     public @NotNull List<Component> getDisplayInfo(@NotNull Player who) {
-        return List.of() /* TODO: Convert LangManager.getList("quest.side.farmers_request.description") manually */;
+        return Arrays.asList(
+                Component.translatable("quest.side.farmers-request.description.0"),
+                Component.translatable("quest.side.farmers-request.description.1"),
+                Component.translatable("quest.side.farmers-request.description.2"),
+                Component.translatable("quest.side.farmers-request.description.3")
+        );
     }
 
     @Override
     public @NotNull Component getObjectiveDescription(@NotNull QuestObjective objective, @NotNull Player who) {
-        String id = objective.getId();
-        return Component.translatable("quest.side.farmers_request.objectives.");
+        String key = "quest.side.farmers-request.objectives." + objective.getId();
+        return Component.translatable(key);
     }
 
-    public QuestDialog getDialog() {
-        QuestDialog dialog = new QuestDialog("farmers_request_dialog");
-
-        dialog.addLine("quest.farmers_request.npcs.farmer", "quest.farmers_request.dialogs.line1");
-        dialog.addLine("quest.farmers_request.npcs.farmer", "quest.farmers_request.dialogs.line2");
-        dialog.addLine("quest.farmers_request.npcs.farmer", "quest.farmers_request.dialogs.line3");
-
-        return dialog;
+    @Override
+    public int getDialogCount() {
+        return 3;
+    }
+    
+    @Override
+    public Component getDialog(int index, @NotNull Player who) {
+        return switch (index) {
+            case 0 -> Component.translatable("quest.side.farmers-request.dialogs.0");
+            case 1 -> Component.translatable("quest.side.farmers-request.dialogs.1");
+            case 2 -> Component.translatable("quest.side.farmers-request.dialogs.2");
+            default -> null;
+        };
+    }
+    
+    @Override
+    public @NotNull Component getNPCName(@NotNull Player who) {
+        return Component.translatable("quest.side.farmers-request.npc-name");
+    }
+    
+    @Override
+    public @NotNull Component getAcceptDialog(@NotNull Player who) {
+        return Component.translatable("quest.side.farmers-request.accept");
+    }
+    
+    @Override
+    public @NotNull Component getDeclineDialog(@NotNull Player who) {
+        return Component.translatable("quest.side.farmers-request.decline");
     }
 }
